--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "es6 playground",
   "main": "app.js",
   "scripts": {
+    "build_webpack": "webpack",
+    "build": "gulp client_move",
     "start": "http-server -p3000 -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +15,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
@@ -25,6 +28,8 @@
   },
   "dependencies": {
     "express": "^4.15.3",
-    "http-server": "^0.10.0"
+    "http-server": "^0.10.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
