--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "es6 playground",
   "main": "app.js",
   "scripts": {
+    "build_sass": "gulp sass",
     "build_webpack": "webpack",
     "build": "gulp client_move",
     "start": "http-server -p3000 -c-1",
