--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "es6 playground",
   "main": "app.js",
   "scripts": {
-    "build_sass": "gulp sass",
-    "build_webpack": "webpack",
-    "build": "gulp client_move",
+    "build_webpack_game": "webpack --config webpack.config.js",
+    "build_webpack": "webpack --config webpack.vendor.js",
     "start": "http-server -p3000 -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +17,7 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.2.0",
     "html-webpack-plugin": "^2.29.0",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
