--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "copy-webpack-plugin": "^4.2.0",
     "html-webpack-plugin": "^2.29.0",
     "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.6.1",
+    "mime": ">=1.4.1",
+    "no-case": ">=2.3.2",
+    "debug": ">=2.6.9",
+    "randomatic": ">=3.0.0"
   },
   "dependencies": {
     "express": "^4.15.3",
