--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express": "^4.15.3",
     "http-server": "^0.10.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "lodash": ">=4.17.5",
+    "url-parse": ">=1.4.3"
   }
 }
